--- a/index.html
+++ b/index.html
@@ -735,8 +735,8 @@
             <div class="absolute inset-0 opacity-10 bg-[url('https://www.transparenttextures.com/patterns/clean-textile.png')]"></div>
             <div class="max-w-4xl mx-auto px-4 text-center relative z-10">
                 <span class="inline-block py-2 px-4 border-2 border-[#C5A065] text-[#C5A065] rounded-full text-sm font-semibold mb-6 tracking-wider">GUIDING THE FUTURE OF WELLNESS</span>
-                <h2 class="text-4xl md:text-5xl font-bold mb-6 serif-font leading-tight">대한민국 치유 웰니스의<br>통합적 방향을 제시합니다</h2>
-                <p class="text-xl text-gray-200 font-light max-w-2xl mx-auto leading-relaxed">
+                <h2 class="text-3xl md:text-5xl font-bold mb-6 serif-font leading-tight">대한민국 의료 웰니스의<br>통합적 방향을 제시합니다</h2>
+                <p class="text-lg text-gray-200 font-light max-w-2xl mx-auto leading-relaxed">
                     의료, 관광, 지역사회를 잇는 전문가들이 모여,<br>
                     국민 건강 증진에 실질적으로 기여할 수 있는 방법을 논의합니다.
                 </p>
@@ -785,8 +785,8 @@
     <section id="page-story" class="page-section max-w-7xl mx-auto px-4 py-16">
         
         <div class="text-center section-title-line">
-            <h2 class="text-4xl font-extrabold mb-3 serif-font" style="color: var(--primary-green);">자연치유 핵심 프로그램: 오정법(五正法)</h2>
-            <p class="text-lg text-gray-600">몸과 마음, 삶의 균형을 되찾는 5가지 올바른 치유의 원칙</p>
+            <h2 class="text-4xl font-extrabold mb-3 serif-font" style="color: var(--primary-green);">자연치유 핵심 철학:<br>오정법(五正法)</h2>
+            <p class="text-lg text-gray-600">몸과 마음, 삶의 균형을 되찾는<br>5가지 올바른 치유의 원칙</p>
         </div>
 
         <div class="grid grid-cols-2 md:grid-cols-5 gap-6 mb-20">
@@ -874,7 +874,7 @@
                     <i class="fas fa-map-marker-alt text-4xl mb-4" style="color: var(--accent-gold);"></i>
                     <h4 class="text-xl font-bold mb-2 text-gray-800">주소</h4>
                     <p class="text-gray-600">
-                        서울특별시 중구 을지로 14길8 을지재단빌딩, 6층
+                        서울특별시 중구 을지로 14길8<br>을지재단빌딩, 6층
                     </p>
                 </div>
 
