--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@
                 <div class="bg-white rounded-xl shadow-md overflow-hidden">
                     <div class="h-48 bg-gray-200">
                         <!-- 실제 활동 사진 -->
-                        <img src="https://breezefeel.github.io/NHT/st2_1.gif" alt="정기 포럼" class="w-full h-full object-cover">
+                        <img src="https://breezefeel.github.io/NHT/IMG_6150.jpg" alt="정기 포럼" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <span class="text-xs bg-green-100 text-green-700 px-2 py-1 rounded">2024.11</span>
@@ -1517,3 +1517,4 @@
     </script>
 </body>
 </html>
+
