--- a/index.html
+++ b/index.html
@@ -1557,7 +1557,7 @@
                     오정법으로 여는 의료 웰니스의 미래
                 </h2>
                 <p class="text-xl mb-8 max-w-3xl mx-auto leading-relaxed">
-                    자연치유관광포럼은<br><strong>평가 기반 의료 웰니스 모델</strong>을 오정법을 중심축으로 고도화하고 있습니다.<br>
+                    자연치유관광포럼은<br><strong>평가 기반 의료 웰니스 모델</strong>을 오정법을 중심축으로 고도화하고 있습니다.<br><br>
                     지역 병원·요양병원·웰니스 리조트·지자체와 협력하여, 진료–비침습 치료–오정법 웰니스 프로그램이 하나의 흐름이 되는 통합 모델을 확장해 갑니다.
                 </p>
                 <div class="flex flex-wrap gap-4 justify-center">
@@ -1883,4 +1883,5 @@
     </script>
 </body>
 </html>
+
 
