--- a/index.html
+++ b/index.html
@@ -1591,7 +1591,8 @@
                     </details>
                 </div>
             </div>
-        </div>        
+        </div>    
+    </section>
 
     <!-- ============================================== -->
     <!-- PAGE: 4. 연락처 (Contact) -->
@@ -1883,5 +1884,6 @@
     </script>
 </body>
 </html>
+
 
 
