--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                                 <img src="https://breezefeel.github.io/NHT/손태경 이사님.jpg" alt="손태경 이사" class="w-full h-full object-cover">
                             </div>
                             <h4 class="text-xl font-bold mb-1 text-gray-800">손태경 이사</h4>
-                            <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">일본 메디컬 니시의학 계승자</p>
-                            <p class="text-sm text-gray-600">현)손태경 통합치유연구원 원장<br>현)손태경 통합치유연구원 원장</p>
+                            <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">日本 메디컬 니시의학 계승자</p>
+                            <p class="text-sm text-gray-600">현)손태경 통합치유연구원 원장<br>와타나베 의원/ 니시연구소 한국 분원장</p>
                         </div>
                         <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300 flex flex-col justify-center items-center">
                             <div class="text-gray-400 mb-4"><i class="fas fa-users-cog text-5xl"></i></div>
@@ -1884,6 +1884,7 @@
     </script>
 </body>
 </html>
+
 
 
 
