--- a/index.html
+++ b/index.html
@@ -1687,7 +1687,7 @@
 
     <!-- 사무처 조직 구성 (깔끔한 카드 리스트 형태) -->
         <div class="max-w-4xl mx-auto bg-white p-6 md:p-10 rounded-xl shadow-2xl border border-gray-100 mt-10">            
-            <p class="text-center text-gray-500 mb-10">자연치유관광포럼의 핵심 운영 조직</p>
+            <p class="text-xl text-center text-gray-500 mb-10"><strong>자연치유관광포럼의 핵심 운영 조직</strong></p>
 
             <!-- Clean, stacked/grid organization listing -->
             <!-- 변경: 모바일에서도 2열 레이아웃을 시작할 수 있도록 grid-cols-1 sm:grid-cols-2 적용 -->
@@ -2023,6 +2023,7 @@
     </script>
 </body>
 </html>
+
 
 
 
