--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                 <img src="https://breezefeel.github.io/NHT/김외정 이사님.jpg" alt="김외정 이사" class="w-full h-full object-cover">
                             </div>
                             <h4 class="text-xl font-bold mb-1 text-gray-800">김외정 부이사장</h4>
-                            <p class="text-base font-semibold mb-3" style="color: var(--primary-green);"><천년도서관슾> 저자</p>
+                            <p class="text-base font-semibold mb-3" style="color: var(--primary-green);"><천년도서관숲> 저자</p>
                             <p class="text-sm text-gray-600">전 국립산림과학원 부장 Ph.D<br>전 국립강원대학교 연구교수</p>
                         </div>
                         <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300">
@@ -2023,6 +2023,7 @@
     </script>
 </body>
 </html>
+
 
 
 
