--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                             </div>
                             <h4 class="text-xl font-bold mb-1 text-gray-800">김외정 부이사장</h4>
                             <p class="text-base font-semibold mb-3" style="color: var(--primary-green);"><천년도서관숲> 저자</p>
-                            <p class="text-sm text-gray-600">전 국립산림과학원 부장 Ph.D<br>전 국립강원대학교 연구교수</p>
+                            <p class="text-sm text-gray-600">前 국립산림과학원 부장 Ph.D<br>前 국립강원대학교 연구교수</p>
                         </div>
                         <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300">
                             <div class="w-28 h-28 bg-gray-200 rounded-full mx-auto mb-4 overflow-hidden border-2 border-white shadow-inner">
@@ -269,8 +269,8 @@
                                 <img src="https://breezefeel.github.io/NHT/손민정 이사님.png" alt="손민정 이사" class="w-full h-full object-cover">
                             </div>
                             <h4 class="text-xl font-bold mb-1 text-gray-800">손민정 이사</h4>
-                            <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">미국 카이로프랙틱 닥터 (D.C.)</p>
-                            <p class="text-sm text-gray-600">(협)희망더하기 사회적협동조합<br>IFC 국제얼굴교정학회 학회장</p>
+                            <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">동구사회적경제문화 센터장</p>
+                            <p class="text-sm text-gray-600">(협)희망더하기 사회적협동조합<br>바느질쟁이 타래</p>
                         </div>
                         <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300">
                             <div class="w-28 h-28 bg-gray-200 rounded-full mx-auto mb-4 overflow-hidden border-2 border-white shadow-inner">
@@ -2023,6 +2023,7 @@
     </script>
 </body>
 </html>
+
 
 
 
