--- a/index.html
+++ b/index.html
@@ -258,6 +258,14 @@
                         </div>
                         <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300">
                             <div class="w-28 h-28 bg-gray-200 rounded-full mx-auto mb-4 overflow-hidden border-2 border-white shadow-inner">
+                                <img src="https://breezefeel.github.io/NHT/송기복 사무총장.jpg" alt="송기복 사무총장" class="w-full h-full object-cover">
+                            </div>
+                            <h4 class="text-xl font-bold mb-1 text-gray-800">송기복 사무총장</h4>
+                            <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">주)태을서관대표(한의학/심리학교육기관)</p>
+                            <p class="text-sm text-gray-600">現 한국심리치료상담학회 학술위원장<br>前 사회복지법인 은빛병원 대표</p>
+                        </div>
+                        <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300">
+                            <div class="w-28 h-28 bg-gray-200 rounded-full mx-auto mb-4 overflow-hidden border-2 border-white shadow-inner">
                                 <img src="https://breezefeel.github.io/NHT/프로필-22_웹용.jpg" alt="박준규 이사" class="w-full h-full object-cover">
                             </div>
                             <h4 class="text-xl font-bold mb-1 text-gray-800">박준규 이사</h4>
@@ -2030,6 +2038,7 @@
     </script>
 </body>
 </html>
+
 
 
 
