--- a/index.html
+++ b/index.html
@@ -1659,10 +1659,12 @@
                     지역 병원·요양병원·웰니스 리조트·지자체와 협력하여, 진료–비침습 치료–오정법 웰니스 프로그램이 하나의 흐름이 되는 통합 모델을 확장해 갑니다.
                 </p>
                 <div class="flex flex-wrap gap-4 justify-center">
-                    <button onclick="switchPage('contact')" 
-                            class="bg-[#C5A065] hover:bg-[#b08f50] text-white px-8 py-4 rounded-full text-lg font-semibold transition-colors shadow-lg">
-                        오정법 프로그램 도입 문의
-                    </button>
+                    <a href="https://breezefeel.github.io/NHT/자연치유관광포럼 의료 웰니스 프로그램-250420.pdf" 
+                       download="오정법_프로그램_자료.pdf" 
+                       class="bg-[#C5A065] hover:bg-[#b08f50] text-white px-8 py-4 rounded-full text-lg font-semibold transition-colors shadow-lg"
+                       role="button">
+                        오정법 프로그램 PDF 다운
+                    </a>
                     <button onclick="switchPage('contact')" 
                             class="bg-white text-[#0F4C3A] hover:bg-gray-100 px-8 py-4 rounded-full text-lg font-semibold transition-colors shadow-lg">
                         오정법 힐링캠프 협력 제안
@@ -2138,6 +2140,7 @@
     </script>
 </body>
 </html>
+
 
 
 
