--- a/index.html
+++ b/index.html
@@ -1663,7 +1663,7 @@
                        download="오정법_프로그램_자료.pdf" 
                        class="bg-[#C5A065] hover:bg-[#b08f50] text-white px-8 py-4 rounded-full text-lg font-semibold transition-colors shadow-lg"
                        role="button">
-                        오정법 프로그램 PDF 다운
+                        포럼 프로그램 PDF 다운
                     </a>
                     <button onclick="switchPage('contact')" 
                             class="bg-white text-[#0F4C3A] hover:bg-gray-100 px-8 py-4 rounded-full text-lg font-semibold transition-colors shadow-lg">
@@ -2140,6 +2140,7 @@
     </script>
 </body>
 </html>
+
 
 
 
