--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                             </div>
                             <h4 class="text-xl font-bold mb-1 text-gray-800">손태경 이사</h4>
                             <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">日本 메디컬 니시의학 계승자</p>
-                            <p class="text-sm text-gray-600">현)손태경 통합치유연구원 원장<br>와타나베 의원/ 니시연구소 한국 분원장</p>
+                            <p class="text-sm text-gray-600">現 손태경 통합치유연구원 원장<br>와타나베 의원/ 니시연구소 한국 분원장</p>
                         </div>
                         <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300">
                             <div class="w-28 h-28 bg-gray-200 rounded-full mx-auto mb-4 overflow-hidden border-2 border-white shadow-inner">
@@ -296,6 +296,14 @@
                             <h4 class="text-xl font-bold mb-1 text-gray-800">신경원 이사</h4>
                             <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">한국싸나톨로지협회 회장</p>
                             <p class="text-sm text-gray-600">고려대학교 죽음교육연구센터 센터장<br>동덕여자대학교 교양학부 교수</p>
+                        </div>
+                        <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300">
+                            <div class="w-28 h-28 bg-gray-200 rounded-full mx-auto mb-4 overflow-hidden border-2 border-white shadow-inner">
+                                <img src="https://breezefeel.github.io/NHT/이용근 이사님.jpg" alt="이용근 이사" class="w-full h-full object-cover">
+                            </div>
+                            <h4 class="text-xl font-bold mb-1 text-gray-800">이용근 이사</h4>
+                            <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">한국관광연구학회 의료웰니스치유관광분과위원장</p>
+                            <p class="text-sm text-gray-600">공주대학교 스마트의료웰니스관광대학원 주임교수<br>바라니사 힌두대학교 의과대학 아유르베다학과 자문교수</p>
                         </div>
                         <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300 flex flex-col justify-center items-center">
                             <div class="text-gray-400 mb-4"><i class="fas fa-users-cog text-5xl"></i></div>
@@ -2140,6 +2148,7 @@
     </script>
 </body>
 </html>
+
 
 
 
