--- a/index.html
+++ b/index.html
@@ -305,6 +305,14 @@
                             <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">한국관광연구학회 의료웰니스치유관광분과위원장</p>
                             <p class="text-sm text-gray-600">공주대학교 스마트의료웰니스관광대학원 주임교수<br>바라니사 힌두대학교 의과대학 아유르베다학과 자문교수</p>
                         </div>
+                        <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300">
+                            <div class="w-28 h-28 bg-gray-200 rounded-full mx-auto mb-4 overflow-hidden border-2 border-white shadow-inner">
+                                <img src="https://breezefeel.github.io/NHT/정순철 이사님.jpg" alt="정순철 이사" class="w-full h-full object-cover">
+                            </div>
+                            <h4 class="text-xl font-bold mb-1 text-gray-800">정순철 이사</h4>
+                            <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">(주) 에스오지 대표</p>
+                            <p class="text-sm text-gray-600">산림학박사<br>숲길등산지도사</p>
+                        </div>
                         <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300 flex flex-col justify-center items-center">
                             <div class="text-gray-400 mb-4"><i class="fas fa-users-cog text-5xl"></i></div>
                             <h4 class="text-xl font-bold text-gray-800 mb-2">이사 및 전문위원단</h4>
@@ -2148,6 +2156,7 @@
     </script>
 </body>
 </html>
+
 
 
 
