--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             </div>
                             <h4 class="text-xl font-bold mb-1 text-gray-800">김근하 상임이사</h4>
                             <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">의학박사/중의학박사</p>
-                            <p class="text-sm text-gray-600">고신의대 외래교수<br>전일의료재단 한가족 요양병원장</p>
+                            <p class="text-sm text-gray-600">고신의대 외래교수<br>전일의료재단 한가족요양병원 원장</p>
                         </div>
                         <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300">
                             <div class="w-28 h-28 bg-gray-200 rounded-full mx-auto mb-4 overflow-hidden border-2 border-white shadow-inner">
@@ -2164,6 +2164,7 @@
     </script>
 </body>
 </html>
+
 
 
 
