--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             <h3 class="text-3xl font-extrabold my-8 serif-font" style="color: var(--primary-green);">
                                 치유는 기술이 아닌<br>삶의 방식으로 찾아옵니다.
                             </h3>
-                            <p class="text-base text-gray-700 font-medium">현)자연치유관광포럼 이사장 전세일-<br>현)전일의료재단 한가족요양병원 병원장<br>전)펜실베니아의대 재활의학 교수<br>전)연세의대 재활병원 원장<br>전)차의과학대학교 통합의학대학원 원장</p>
+                            <p class="text-base text-gray-700 font-medium">現)자연치유관광포럼 이사장 전세일<br>現)전일의료재단 한가족요양병원 병원장<br>前)펜실베니아의대 재활의학 교수<br>前)연세대 세브란스병원 재활병원장<br>前)차의과학대학교 통합의학대학원 원장</p>
                         </div>
                         <div class="flex justify-center mb-8">
                             <img src="https://breezefeel.github.io/NHT/전세일 원장님.jpg" alt="전세일 이사장님" class="w-64 h-auto rounded-xl shadow-lg border border-gray-200 object-cover">
@@ -247,7 +247,7 @@
                             </div>
                             <h4 class="text-xl font-bold mb-1 text-gray-800">전세일 이사장</h4>
                             <p class="text-base font-semibold mb-3" style="color: var(--primary-green);">통합의학 권위자 / 연세대학교 명예교수</p>
-                            <p class="text-sm text-gray-600">現 자연치유관광포럼 이사장<br>前 연세대 세브란스병원 재활병원장</p>
+                            <p class="text-sm text-gray-600">前 펜실베니아의대 재활의학교수<br>前 연세대 세브란스병원 재활병원장<br>前 차의과학대학교 통합의학대학원 원장</p>
                         </div>
                         <div class="bg-gray-50 p-6 rounded-lg text-center border border-gray-100 shadow-md hover:shadow-xl transition duration-300">
                             <div class="w-28 h-28 bg-gray-200 rounded-full mx-auto mb-4 overflow-hidden border-2 border-white shadow-inner">
@@ -2187,6 +2187,7 @@
     </script>
 </body>
 </html>
+
 
 
 
